Override width of YiJing Hexagram Symbols Unicode characters (0x4dc0-0x4dff)

Their Unicode width is 1, but GNU libc's wcwidth and libreadline
override it to 2, so it makes sense to follow suit.

The profile option "ignore wcwidth" returns the width to 1, if
enabled, so it allows the old behavior if it desired. 

BUG: 421625